# test_release_bumper

./: inputs.json  pyproject.toml
.github/workflows/: bump_and_build.yaml
