[tool.poetry]
name = "test-release-bumper"
version = "0.1.0"
description = ""
authors = ["Pavel Mackarichev <vixtir90@gmail.com>"]
readme = "README.md"
packages = [{include = "test_release_bumper"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
